--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@reduxjs/toolkit": "^2.2.1",
+    "next": "13.4.10",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
-  }
+    "react-redux": "^9.1.0",
+    "babel-plugin-styled-components": "^2.1.4",
+    "styled-components": "^6.1.8"
+  },
+  "devDependencies": {}
 }
